src/test/deca/context/valid/class/override_method_with_asm.deca
/// Description:
// 	  Asm method override example
// Resultats:
// 	  ok
// Historique:
// 	  cree le 18/01/2023
class A {
    protected boolean x;
    void myAsmBody(float x, boolean a)
        asm("");
}

class B extends A {
    void myAsmBody(float my_x, boolean my_a) {
        print("bloc");
    }
}

